--- a/interactives/hawk-rabbit-evolution.jade
+++ b/interactives/hawk-rabbit-evolution.jade
@@ -11,8 +11,10 @@ html
     +script(src="species/fast-plants-roots.js")
     +script(src="species/white-brown-rabbits.js")
     +script(src="species/hawks.js")
+    +script(src="species/rabbits-biologica.js")
     +script(src="environments/snow.js")
     +script(src="models/hawk-rabbit-evolution.js")
+
     style(type="text/css").
       #graph {
         position: absolute;
