Adding environment switching
Also overwriting functions to allow for genetic breeding of parents

--- a/interactives/hawk-rabbit-evolution.jade
+++ b/interactives/hawk-rabbit-evolution.jade
@@ -18,7 +18,7 @@ html
     style(type="text/css").
       #graph {
         position: absolute;
-        top: 500px;
+        top: 525px;
         left: 5px;
         width: 500px;
         height: 300px;
@@ -26,5 +26,7 @@ html
 
   body
     #environment
+    #controls
+      button#switch-env= "Switch Environments"
     #below
       #graph
